# ai-home

./: .gitignore  AGENTS.md  README.md  README_en.md  ROADMAP.md  package-lock.json  package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/icons/: icon.icns  source.png.b64
desktop/tauri/src-tauri/src/: main.rs  runtime.rs
desktop/tauri/src-tauri/src/commands/: accounts.rs  audit.rs  auth.rs  migration.rs  proxy.rs
logs/: remote-chaos-drill-20260302-000501.json  remote-chaos-drill-20260302-000536.json  remote-chaos-drill-20260302-000733.json
plans/: AGENT_BOARD.md  FOLDERS.md  PROMPTS.md  README.md  _template.plan.md  proxy-parallel-2026-03-01.plan.md  proxy-v1-routing-2026-03-01.plan.md  roadmap-m3-1-desktop-mvp-2026-03-01.plan.md
scripts/: install-plan-hook.js  plan-board-live.js  plan-board.js  plan-commit-guard.js  plan-dispatch.js  plan-foreman.js  plan-orchestrate.js  plan-run.js  plan-watchdog-daemon.js  plan-watchdog.js  postinstall.js  remote-chaos-drill.sh
test/: account.state-index.test.js  account.wiring.bootstrap.test.js  ai-cli.account-import-orchestrator.test.js  ai-cli.importers.test.js  ai-cli.router.test.js  backup.router.test.js  backup.wiring.bootstrap.test.js  cli.session-baseline.test.js  client.auth-session.e2e.test.js  client.serve-auth.integration.test.js  cliproxyapi-export.test.js  codex-bulk-import.test.js  command-path.test.js  desktop.gui.smoke.e2e.test.js  doctor.checks.test.js  host-sync.test.js  macos-arm-installer.smoke.test.js  mobile.push.bridge.test.js  mobile.reconnect.e2e.test.js  (+38 more)
(+207 files in other folders)
